--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "19.1.0",
     "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.2.1",
     "shadcn-ui": "^0.9.5"
   },
   "devDependencies": {
